# CCT

./: CMakeLists.txt  README.md
cct/: CMakeLists.txt  Config.hpp  PlatformConfig.hpp  TimeStamp.hpp
cct/gpu/: CMakeLists.txt  CudaDevice.cpp  CudaDevice.hpp  CudaGpu.cpp  CudaGpu.cu  CudaGpu.hpp  CudaHelper.cpp  CudaHelper.hpp
cmake/: CMakeMacros.cmake  Find3rdParty.cmake
docs/: CMakeLists.txt  doxy.config
examples/: CMakeLists.txt  TestClass.hpp
examples/hardware/: CMakeLists.txt  README.txt  hardwareTest.cpp  hardwareTest.cu  hardwareTest.hpp
examples/memory/: CMakeLists.txt  README.txt  memoryTest.cpp  memoryTest.cu  memoryTest.hpp
examples/multilevel/: CMakeLists.txt  README.txt  multilevelTest.cpp  multilevelTest.cu  multilevelTest.hpp
examples/resource/: CMakeLists.txt  README.txt  resourceTest.cpp  resourceTest.cu  resourceTest.hpp
examples/scaling/: CMakeLists.txt  scalingTest.cpp  scalingTest.cu  scalingTest.hpp
examples/streamsync/: CMakeLists.txt  README.txt  streamsyncTest.cpp  streamsyncTest.cu  streamsyncTest.hpp
